// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NPM Extension > 'npm-package-info' > given a valid package > then it should return formatted data 1`] = `
"        name │ express
     version │ 4.18.2
     license │ MIT
      author │ TJ Holowaychuk
 description │ Fast, unopinionated, minimalist web framework
    homepage │ http://expressjs.com/
  repository │ git+https://github.com/expressjs/express.git
    keywords │ express, framework, web, http
dependencies │ 0 deps · 0 devDeps"
`;

exports[`NPM Extension > 'npm-package-versions' > given a valid package > then it should return formatted data 1`] = `
"3 version(s)

  latest │ 4.17.21
    beta │ 4.17.21-rc.1
versions │ 4.17.21, 4.17.20, 4.17.21-rc.1"
`;

exports[`NPM Extension > npm-package-info > given a valid package name > then it should return formatted package info 1`] = `
"        name │ express
     version │ 4.18.2
     license │ MIT
      author │ TJ Holowaychuk
 description │ Fast, unopinionated, minimalist web framework
    homepage │ http://expressjs.com/
  repository │ git+https://github.com/expressjs/express.git
    keywords │ express, framework, web, http
dependencies │ 2 deps · 1 devDeps"
`;

exports[`NPM Extension > npm-package-versions > given a valid package with multiple versions > then it should return formatted versions 1`] = `
"3 version(s)

  latest │ 4.17.21
    beta │ 4.17.21-rc.1
versions │ 4.17.21, 4.17.20, 4.17.21-rc.1"
`;

exports[`NPM Extension > search-npm-packages > given a valid search query > then it should return formatted search results 1`] = `
"1 result(s)

  # │ version │ package
────┼─────────┼──────────────────────────────────────────
  1 │ 4.17.21 │ lodash
    │         │ A modern JavaScript utility library
    │         │ util, functional, server, client, browser
    │         │ John-David Dalton"
`;

exports[`NPM Extension npm-package-info given a valid package then it should return formatted data 1`] = `
"        name │ express
     version │ 4.18.2
     license │ MIT
      author │ TJ Holowaychuk
 description │ Fast, unopinionated, minimalist web framework
    homepage │ http://expressjs.com/
  repository │ git+https://github.com/expressjs/express.git
    keywords │ express, framework, web, http
dependencies │ 0 deps · 0 devDeps"
`;

exports[`NPM Extension npm-package-versions given a valid package then it should return formatted data 1`] = `
"3 version(s)

  latest │ 4.17.21
    beta │ 4.17.21-rc.1
versions │ 4.17.21, 4.17.20, 4.17.21-rc.1"
`;

exports[`NPM Extension search-npm-packages given a valid search query then it should return formatted search results 1`] = `
"1 result(s)

  # │ version │ package
────┼─────────┼──────────────────────────────────────────
  1 │ 4.17.21 │ lodash
    │         │ A modern JavaScript utility library
    │         │ util, functional, server, client, browser
    │         │ John-David Dalton"
`;
